# obj-renderer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  flamegraph.sh  output.ppm  readme.md  textured-cornell-box.mtl  wood.ppm
assets/mtl/: cornell-box.mtl  textured-cornell-box.mtl
assets/normal/: crystal.ppm  fabric.ppm  grass.ppm  moss.ppm  slate.ppm  stone.ppm  water.ppm  waves.ppm
assets/texture/: crystal.ppm  fabric.ppm  grass.ppm  moss.ppm  slate.ppm  stone.ppm  water.ppm
libs/: font8x8_basic.h
libs/sdw/: CanvasPoint.h  DrawingWindow.cpp  DrawingWindow.h  ModelTriangle.cpp  ModelTriangle.h  RayTriangleIntersection.cpp  RayTriangleIntersection.h  TextureMap.cpp  TextureMap.h  Utils.cpp
src/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialLib.cpp  MaterialLib.h  Object.cpp  Object.h  ObjectFile.cpp  ObjectFile.h  RedNoise.cpp  Renderer.cpp  Scene.cpp  Scene.h  SceneCollection.cpp  SceneCollection.h  Utilities.cpp  camera.cpp  drawing.cpp  font8x8_basic.h  main.cpp  objutil.cpp  postprocessing.cpp  postprocessing.h  vecutil.cpp
src/utility/: drawing.cpp  drawing.h  vectors.cpp  vectors.h
